<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">Popular Movies</string>
    <string name="hello_world">Hello world!</string>
    <string name="edit_message">Edit Message!</string>
    <string name="button_send">Button send!</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="image_base_link">"http://image.tmdb.org/t/p/"</string>
    <string name="top_rated">Top Rated</string>
    <string name="most_popular">Most Popular</string>
    <string name="refresh">Refresh</string>
    <string name="favorites">Favorites</string>
</resources>