<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">
    <item android:id="@+id/action_settings"
        android:icon ="@drawable/ic_settings"
        android:title = "@string/action_settings"
        app:showAsAction="always">
        <menu>
            <group android:id = "@+id/group"
                android:checkableBehavior="single">
                <item android:id="@+id/top_rated" android:title="@string/top_rated"  app:showAsAction="never" />
                <item android:id="@+id/most_popular" android:title="@string/most_popular"  app:showAsAction="never" />
                <item android:id="@+id/favorites" android:title="@string/favorites" app:showAsAction="never"/>
            </group>
        </menu>
    </item>

    <item android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:title ="@string/refresh"
        app:showAsAction="ifRoom"/>

</menu>
